--- a/css/nav.css
+++ b/css/nav.css
@@ -3,7 +3,7 @@ nav {
   /* width: 100%; */
   right: 0;
 
-  z-index: 1000;
+  z-index: 999;
 }
 
 .primary-nav {
@@ -37,9 +37,10 @@ nav {
 }
 
 .primary-nav .current-site {
-  -webkit-text-stroke: 2px var(--accent-clr);
-  color: var(--white);
   font-size: min(2rem, 2.5vw);
+
+  color: var(--white);
+  -webkit-text-stroke: min(1.5px, 0.375vw) var(--accent-clr);
 
   font-family: "Simply Rounded Bold";
 }
@@ -56,7 +57,7 @@ nav {
     border-radius: 0;
 
     flex-direction: column;
-    padding: min(30vh, 10rem) min(2rem, 4vw);
+    padding: min(30vh, 10rem, 60vw) min(2rem, 4vw);
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
   }
@@ -66,29 +67,31 @@ nav {
   }
 
   .primary-nav a {
-    font-size: min(1.5rem, 5vw);
+    font-size: min(2rem, 5vw);
   }
 
   .primary-nav .current-site {
-    font-size: min(1.75rem, 6vw);
+    font-size: min(2.5rem, 6vw);
   }
 
   .mobile-nav-toggle {
     display: block;
 
     position: fixed;
-    top: 2rem;
-    right: 2rem;
-    z-index: 9999;
+    top: min(2rem, 8vw);
+    right: min(2rem, 8vw);
+    z-index: 1000;
 
     background-image: url(../img/hamburger-icon.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-color: rgba(0, 0, 0, 0.5);
+
+    background-size: 75%;
+    padding: min(1.5rem, 4vw);
+
     border-radius: 20%;
     border: 0;
-
-    width: 1.25rem;
     aspect-ratio: 1;
   }
 
